// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CertificationBadge /> renders "CERTIFIED" if certified 1`] = `
<small
  className="label label-success pull-right"
>
  <i
    aria-hidden="true"
    className="fa fa-check-circle"
  />
  <span>
     CERTIFIED
  </span>
</small>
`;

exports[`<CertificationBadge /> renders "NOT CERTIFIED" if not certified 1`] = `
<small
  className="label label-warning pull-right"
>
  <i
    aria-hidden="true"
    className="fa fa-exclamation-circle"
  />
  <span>
     NOT CERTIFIED
  </span>
</small>
`;
